[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/sprites/enemies/ricardo/ricardo-crouch-05.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/enemies/ricardo/ricardo-crouch-03.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/enemies/ricardo/ricardo-crouch-04.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/enemies/ricardo/ricardo-crouch-07.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/enemies/ricardo/ricardo-crouch-02.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/enemies/ricardo/ricardo-crouch-06.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/enemies/ricardo/ricardo-walk-01.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/enemies/ricardo/ricardo-walk-00.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/enemies/ricardo/ricardo-walk-02.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/enemies/ricardo/ricardo-walk-03.png" type="Texture" id=10]
[ext_resource path="res://scripts/ricardo.gd" type="Script" id=11]
[ext_resource path="res://assets/sprites/enemies/ricardo/ricardo-walk-04.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/enemies/ricardo/ricardo-walk-05.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/enemies/ricardo/ricardo-crouch-01.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/enemies/ricardo/ricardo-walk-06.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/enemies/ricardo/ricardo-walk-07.png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/enemies/ricardo/ricardo-walk-08.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/enemies/ricardo/ricardo-walk-09.png" type="Texture" id=18]
[ext_resource path="res://assets/sprites/enemies/ricardo/ricardo-crouch-00.png" type="Texture" id=19]
[ext_resource path="res://assets/sfx/gunshot.wav" type="AudioStream" id=20]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "walk",
"speed": 24.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 14 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "crouch",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 21 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 21 )

[node name="Ricardo" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource( 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walk"
frame = 7
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="FloorRay" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 2

[node name="HitZone" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitZone"]
visible = false
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="GunshotSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )

[connection signal="body_entered" from="HitZone" to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timeout"]
